--- a/main.html
+++ b/main.html
@@ -1,21 +1,64 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <title>Sound Keyboard</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <div class="keys">
-        <div class="key" data-key="65">A</div>
-        <div class="key" data-key="83">S</div>
-        <div class="key" data-key="68">D</div>
-        <div class="key" data-key="70">F</div>
-        <div class="key" data-key="71">G</div>
-        <div class="key" data-key="72">H</div>
-        <div class="key" data-key="74">J</div>
-        <div class="key" data-key="75">K</div>
-        <div class="key" data-key="76">L</div>
+	<!-- the entire body must be written by student -->
+	<div class="keys">
+    <div class="key" data-key="65">
+        <kbd>A</kbd>
+        <span class="sound">Clap</span>
     </div>
-    <script type="text/javascript" src="script.js"></script>
+    <div class="key" data-key="83">
+        <kbd>S</kbd>
+        <span class="sound">Hihat</span>
+    </div>
+    <div class="key" data-key="68">
+        <kbd>D</kbd>
+        <span class="sound">Kick</span>
+    </div>
+    <div class="key" data-key="70">
+        <kbd>F</kbd>
+        <span class="sound">Openhat</span>
+    </div>
+<div class="key" data-key="71">
+        <kbd>G</kbd>
+        <span class="sound">Boom</span>
+    </div>
+    <div class="key" data-key="72">
+        <kbd>H</kbd>
+        <span class="sound">Ride</span>
+    </div>
+    <div class="key" data-key="74">
+        <kbd>J</kbd>
+        <span class="sound">Snare</span>
+    </div>
+    <div class="key" data-key="75">
+        <kbd>K</kbd>
+        <span class="sound">Tom</span>
+    </div>
+<div class="key" data-key="76">
+        <kbd>L</kbd>
+        <span class="sound">Tink</span>
+    </div>
+</div>
+
+<audio data-key="65" src="sounds/clap.wav"></audio>
+<audio data-key="83" src="sounds/hihat.wav"></audio>
+<audio data-key="68" src="sounds/kick.wav"></audio>
+<audio data-key="70" src="sounds/openhat.wav"></audio>
+<audio data-key="71" src="sounds/boom.wav"></audio>
+<audio data-key="72" src="sounds/ride.wav"></audio>
+<audio data-key="74" src="sounds/snare.wav"></audio>
+<audio data-key="75" src="sounds/tom.wav"></audio>
+<audio data-key="76" src="sounds/tink.wav"></audio>
+    <script type="text/javascript" src="./script.js">
+</script>
+
 </body>
+
 </html>
